[fix] Refactor VisibilitySensor

--- a/app/javascript/pages/home/styles/stauses.scss
+++ b/app/javascript/pages/home/styles/stauses.scss
@@ -1,4 +1,5 @@
 .statuses {
+  margin-top: 150px;
   .statuses-wrapper {
     transform: scale(1.1);
     position: relative;
